[package]
name = "bit_vector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = {version = "1", features = ["serde"]}
get-size = { version = "^0.1", features = ["derive"] }
num-integer = "0.1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
rand = "0.8.4"
plotters = "0.3.1"
itertools = "0.8"